ECOSUI-150 fixed visibility actions in any cases

--- a/src/components/Journals/Journals.scss
+++ b/src/components/Journals/Journals.scss
@@ -9,7 +9,7 @@
   display: flex;
 
   &_scroll {
-    overflow: scroll;
+    overflow-y: auto;
   }
 
   &_mobile {
